--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -115,8 +115,10 @@
         "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\r\n",
         "import pytorch_ssim as ssim\r\n",
         "\r\n",
+        "%cd /content\r\n",
+        "!rm -rf aphantasia\r\n",
         "!git clone https://github.com/eps696/aphantasia\r\n",
-        "%cd /content/aphantasia/\r\n",
+        "%cd aphantasia/\r\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\r\n",
         "from utils import pad_up_to, basename, img_list, img_read\r\n",
         "from progress_bar import ProgressIPy as ProgressBar\r\n",
@@ -194,7 +196,8 @@
         "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \r\n",
         "\r\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
-        "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti."
+        "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \r\n",
+        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).  "
       ]
     },
     {
@@ -210,7 +213,7 @@
         "# drive.mount('/content/GDrive')\n",
         "# clipsDir = '/content/GDrive/MyDrive/T2I ' + dtNow.strftime(\"%Y-%m-%d %H%M\")\n",
         "\n",
-        "!rm -rf tempdir\n",
+        "!rm -rf $tempdir\n",
         "\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
@@ -218,10 +221,12 @@
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = True #@param {type:\"boolean\"}\n",
         "sync =  0.01 #@param {type:\"number\"}\n",
+        "contrast = 1. #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
+        "progressive_grow = False #@param {type:\"boolean\"}\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "\n",
         "if len(fine_details) > 0:\n",
@@ -286,7 +291,13 @@
         "init_pt = params_pt if resume is True else None\n",
         "params, image_f = param_f(shape, resume=init_pt)\n",
         "image_f = to_valid_rgb(image_f)\n",
-        "optimizer = torch.optim.Adam(params, learning_rate)\n",
+        "\n",
+        "if progressive_grow is True:\n",
+        "  lr1 = learning_rate * 2\n",
+        "  lr0 = lr1 * 0.01\n",
+        "else:\n",
+        "  lr0 = learning_rate\n",
+        "optimizer = torch.optim.Adam(params, lr0)\n",
         "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
@@ -298,7 +309,7 @@
         "\n",
         "def checkout(num):\n",
         "  with torch.no_grad():\n",
-        "    img = image_f().cpu().numpy()[0]\n",
+        "    img = image_f(contrast=contrast).cpu().numpy()[0]\n",
         "  save_img(img, os.path.join(tempdir, '%04d.jpg' % num))\n",
         "  outpic.clear_output()\n",
         "  with outpic:\n",
@@ -325,6 +336,11 @@
         "      loss += sign * torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
         "  del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
+        "\n",
+        "  if progressive_grow is True:\n",
+        "    lr_cur = lr0 + (i / steps) * (lr1 - lr0)\n",
+        "    for g in optimizer.param_groups: \n",
+        "      g['lr'] = lr_cur\n",
         "\n",
         "  optimizer.zero_grad()\n",
         "  loss.backward()\n",
