--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -7,8 +7,7 @@
       "name": "Illustra.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -124,6 +123,8 @@
         "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\r\n",
         "import pytorch_ssim as ssim\r\n",
         "\r\n",
+        "%cd /content\r\n",
+        "!rm -rf aphantasia\r\n",
         "!git clone https://github.com/eps696/aphantasia\r\n",
         "%cd aphantasia/\r\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\r\n",
@@ -191,7 +192,11 @@
         "Try adding `noise_scale` to explore some compositional changes.  \r\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \r\n",
-        "`show_freq` controls preview frequency (doesn't affect the results, set it higher to speed up process). "
+        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`, see more [here](https://github.com/eps696/aphantasia/issues/2)).   \r\n",
+        "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process). \r\n",
+        "\r\n",
+        "`--keep X` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \r\n",
+        "Setting it higher starts each generation closer to the average of previous runs, effectively keeping macro compositions more similar and the transitions smoother. Safe values are < 0.5 (higher numbers may cause the imagery getting stuck). This behaviour depends on the input, so test with your prompts and see what's better in your case."
       ]
     },
     {
@@ -207,7 +212,7 @@
         "# drive.mount('/content/GDrive')\n",
         "# clipsDir = '/content/GDrive/MyDrive/T2I ' + dtNow.strftime(\"%Y-%m-%d %H%M\")\n",
         "\n",
-        "!rm -rf tempdir\n",
+        "!rm -rf $tempdir\n",
         "\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
@@ -215,13 +220,14 @@
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = False #@param {type:\"boolean\"}\n",
-        "keep = 'None' #@param ['None', 'all', 'last']\n",
+        "keep = 0. #@param {type:\"number\"}\n",
         "noise_scale = 0. #@param {type:\"number\"}\n",
         "contrast = 1. #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
+        "progressive_grow = False #@param {type:\"boolean\"}\n",
         "show_freq = 10 #@param {type:\"integer\"}\n",
         "fps = 25\n",
         "\n",
@@ -241,20 +247,23 @@
         "\n",
         "workdir = os.path.join(work_dir, basename(text_file))\n",
         "workdir += '-%s' % model if 'RN' in model.upper() else ''\n",
+        "!rm -rf $workdir\n",
         "os.makedirs(workdir, exist_ok=True)\n",
         "\n",
         "outpic = ipy.Output()\n",
         "outpic\n",
         "  \n",
         "# make init\n",
-        "global params_start\n",
+        "global params_start, params_ema\n",
         "params_shape = [1, 3, sideY, sideX//2+1, 2]\n",
         "params_start = torch.randn(*params_shape).cuda() # random init\n",
+        "params_ema = 0.\n",
         "\n",
         "if resume is True:\n",
         "  # print(' resuming from', resumed)\n",
         "  params, _ = fft_image([1, 3, sideY, sideX], resume = params_pt)\n",
-        "  params_start = ema(params_start, params[0].detach(), 1) \n",
+        "  if keep > 0:\n",
+        "    params_ema = params[0].detach()\n",
         "  torch.save(params_pt, os.path.join(workdir, '000-start.pt'))\n",
         "else:\n",
         "  torch.save(params_start, os.path.join(workdir, '000-start.pt'))\n",
@@ -266,7 +275,13 @@
         "  global params_start\n",
         "  params, image_f = fft_image([1, 3, sideY, sideX], resume='init.pt')\n",
         "  image_f = to_valid_rgb(image_f)\n",
-        "  optimizer = torch.optim.Adam(params, learning_rate)\n",
+        "  \n",
+        "  if progressive_grow is True:\n",
+        "    lr1 = learning_rate * 2\n",
+        "    lr0 = lr1 * 0.01\n",
+        "  else:\n",
+        "    lr0 = learning_rate\n",
+        "  optimizer = torch.optim.Adam(params, lr0)\n",
         "    \n",
         "  print(' ref text: ', txt)\n",
         "  if translate:\n",
@@ -275,7 +290,7 @@
         "    print(' translated to:', txt)\n",
         "  tx = clip.tokenize(txt).cuda()\n",
         "  txt_enc = model_clip.encode_text(tx).detach().clone()\n",
-        "  out_name = '%02d-%s' % (num, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
+        "  out_name = '%03d-%s' % (num+1, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
         "  tempdir = os.path.join(workdir, out_name)\n",
         "  os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
@@ -290,6 +305,11 @@
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
         "    del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
+        "\n",
+        "    if progressive_grow is True:\n",
+        "      lr_cur = lr0 + (i / steps) * (lr1 - lr0)\n",
+        "      for g in optimizer.param_groups: \n",
+        "        g['lr'] = lr_cur\n",
         "\n",
         "    optimizer.zero_grad()\n",
         "    loss.backward()\n",
@@ -306,12 +326,11 @@
         "\n",
         "    pbar.upd()\n",
         "\n",
-        "  if keep == 'all':\n",
-        "      params_start = ema(params_start, params[0].detach(), num+1)\n",
-        "      torch.save(params_start, 'init.pt')\n",
-        "  elif keep == 'last':\n",
-        "      torch.save((params_start + params[0].detach()) / 2, 'init.pt')\n",
-        "  \n",
+        "  if keep > 0:\n",
+        "    global params_start, params_ema\n",
+        "    params_ema = ema(params_ema, params[0].detach(), num+1)\n",
+        "    torch.save((1-keep) * params_start + keep * params_ema, 'init.pt')\n",
+        "\n",
         "  torch.save(params[0], '%s.pt' % os.path.join(workdir, out_name))\n",
         "  # shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
         "  # os.system('ffmpeg -v warning -y -i %s\\%%05d.jpg \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
@@ -342,26 +361,13 @@
         "      img = image_f((params2 - params1) * math.sin(1.5708 * i/vsteps)**2)[0].permute(1,2,0)\n",
         "      img = torch.clip(img*255, 0, 255).cpu().numpy().astype(np.uint8)\n",
         "    imageio.imsave(os.path.join(tempdir, '%05d.jpg' % (px * vsteps + i)), img)\n",
-        "    pbar.upd()\n",
+        "    _ = pbar.upd()\n",
         "\n",
         "HTML(makevid(tempdir))\n",
         "\n"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xbHJ5PtDi7OQ"
-      },
-      "source": [
-        "Short note about `keep` option:  \r\n",
-        "`keep = None`: every frame is produced independently (init = random).  \r\n",
-        "`keep = all`: init generation with the average of previous runs (means closer compositions and smoother transitions).  \r\n",
-        "`keep = last`: init generation with the last run; result is even smoother and more continuous, but may tend to getting stuck.  \r\n",
-        "This behaviour heavily depends on the input, so test with your prompts and see what's better in your case."
-      ]
     }
   ]
 }
