--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -125,7 +125,6 @@
         "\r\n",
         "workdir = '_out'\r\n",
         "tempdir = os.path.join(workdir, 'ttt')\r\n",
-        "os.makedirs(tempdir, exist_ok=True)\r\n",
         "\r\n",
         "clear_output()\r\n",
         "\r\n",
@@ -214,6 +213,7 @@
         "# clipsDir = '/content/GDrive/MyDrive/T2I ' + dtNow.strftime(\"%Y-%m-%d %H%M\")\n",
         "\n",
         "!rm -rf $tempdir\n",
+        "os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
