--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -132,6 +132,7 @@
         "if resume:\r\n",
         "  resumed = files.upload()\r\n",
         "  params_pt = list(resumed.values())[0]\r\n",
+        "  params_pt = torch.load(io.BytesIO(params_pt))\r\n",
         "\r\n",
         "def makevid(seq_dir, size=None):\r\n",
         "  out_sequence = seq_dir + '/%04d.jpg'\r\n",
