--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -137,6 +137,7 @@
         "if resume:\r\n",
         "  resumed = files.upload()\r\n",
         "  params_pt = list(resumed.values())[0]\r\n",
+        "  params_pt = torch.load(io.BytesIO(params_pt))\r\n",
         "\r\n",
         "def ema(base, next, step):\r\n",
         "    scale_ma = 1. / (step + 1)\r\n",
