--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -197,6 +197,10 @@
         "\r\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
         "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \r\n",
+        "\r\n",
+        "Other tricks:  \r\n",
+        "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \r\n",
+        "`expand` boosts training steps in general (difference between consequent samples).  good start is  ~0.2.   \r\n",
         "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).  "
       ]
     },
@@ -227,8 +231,11 @@
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
-        "progressive_grow = False #@param {type:\"boolean\"}\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
+        "#@markdown > Tricks\n",
+        "diverse = 0. #@param {type:\"number\"}\n",
+        "expand = 0. #@param {type:\"number\"}\n",
+        "progressive_grow = False #@param {type:\"boolean\"}\n",
         "\n",
         "if len(fine_details) > 0:\n",
         "  samples = int(samples * 0.75)\n",
@@ -242,6 +249,9 @@
         "if 'RN' in model:\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
+        "if diverse > 0:\n",
+        "  samples = int(samples * 0.5)\n",
+        "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "sign = 1. if invert is True else -1.\n",
         "\n",
@@ -316,6 +326,7 @@
         "  with outpic:\n",
         "    display(Image('result.jpg'))\n",
         "\n",
+        "prev_enc = 0\n",
         "def train(i):\n",
         "  loss = 0\n",
         "  img_out = image_f()\n",
@@ -323,6 +334,11 @@
         "  micro = False if len(fine_details) > 0 else None\n",
         "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
+        "  if diverse > 0:\n",
+        "    imgs_sliced = slice_imgs([image_f()], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
+        "    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
+        "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
+        "    del out_enc2; torch.cuda.empty_cache()\n",
         "  if upload_image:\n",
         "      loss += sign * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
         "  if len(text) > 0: # input text\n",
@@ -336,6 +352,11 @@
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "      loss += sign * torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
+        "  if expand > 0:\n",
+        "    global prev_enc\n",
+        "    if i > 0:\n",
+        "      loss += expand * torch.cosine_similarity(out_enc, prev_enc, dim=-1).mean()\n",
+        "    prev_enc = out_enc.detach()\n",
         "  del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
         "  if progressive_grow is True:\n",
