--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -193,8 +193,12 @@
         "Try adding `noise_scale` to explore some compositional changes.  \r\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \r\n",
-        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`, see more [here](https://github.com/eps696/aphantasia/issues/2)).   \r\n",
         "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process). \r\n",
+        "\r\n",
+        "Other tricks:  \r\n",
+        "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \r\n",
+        "`expand` boosts training steps in general (difference between consequent samples).  good start is  ~0.2.   \r\n",
+        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).   \r\n",
         "\r\n",
         "`--keep X` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \r\n",
         "Setting it higher starts each generation closer to the average of previous runs, effectively keeping macro compositions more similar and the transitions smoother. Safe values are < 0.5 (higher numbers may cause the imagery getting stuck). This behaviour depends on the input, so test with your prompts and see what's better in your case."
@@ -226,8 +230,11 @@
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
-        "progressive_grow = False #@param {type:\"boolean\"}\n",
         "show_freq = 10 #@param {type:\"integer\"}\n",
+        "#@markdown > Tricks\n",
+        "diverse = 0. #@param {type:\"number\"}\n",
+        "expand = 0. #@param {type:\"number\"}\n",
+        "progressive_grow = False #@param {type:\"boolean\"}\n",
         "fps = 25\n",
         "\n",
         "model_clip, _ = clip.load(model)\n",
@@ -236,6 +243,9 @@
         "if 'RN' in model:\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
+        "if diverse > 0:\n",
+        "  samples = int(samples * 0.5)\n",
+        "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "\n",
         "text_file = list(uploaded)[0]\n",
@@ -269,6 +279,7 @@
         "\n",
         "torch.save(params_start, 'init.pt') # final init\n",
         "\n",
+        "prev_enc = 0\n",
         "def process(txt, num):\n",
         "\n",
         "  global params_start\n",
@@ -304,6 +315,16 @@
         "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
+        "    if diverse > 0:\n",
+        "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
+        "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
+        "      loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
+        "      del out_enc2; torch.cuda.empty_cache()\n",
+        "    if expand > 0:\n",
+        "      global prev_enc\n",
+        "      if i > 0:\n",
+        "        loss += expand * torch.cosine_similarity(out_enc, prev_enc, dim=-1).mean()\n",
+        "      prev_enc = out_enc.detach()\n",
         "    del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
         "    if progressive_grow is True:\n",
