--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -139,6 +139,9 @@
         "  params_pt = list(resumed.values())[0]\r\n",
         "  params_pt = torch.load(io.BytesIO(params_pt))\r\n",
         "\r\n",
+        "def read_pt(file):\r\n",
+        "  return torch.load(file).cuda()\r\n",
+        "\r\n",
         "def ema(base, next, step):\r\n",
         "    scale_ma = 1. / (step + 1)\r\n",
         "    return next * scale_ma + base * (1.- scale_ma)\r\n",
@@ -365,9 +368,6 @@
         "!rm -rf $tempdir\n",
         "os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
-        "def read_pt(file):\n",
-        "  return torch.load(file).cuda()\n",
-        "\n",
         "print(' rendering complete piece')\n",
         "ptfiles = file_list(workdir, 'pt')\n",
         "pbar = ProgressBar(vsteps * len(ptfiles))\n",
@@ -387,6 +387,54 @@
         "\n",
         "HTML(makevid(tempdir))\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "rARq2n6LgVVp"
+      },
+      "source": [
+        "#@markdown Run this, if you need to make the same video of another length (model must be the same)\n",
+        "\n",
+        "duration =  12#@param {type:\"integer\"}\n",
+        "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
+        "fps = 25\n",
+        "\n",
+        "text_file = list(uploaded)[0]\n",
+        "workdir = os.path.join(work_dir, basename(text_file))\n",
+        "workdir += '-%s' % model if 'RN' in model.upper() else ''\n",
+        "tempdir = os.path.join(workdir, '_final')\n",
+        "!rm -rf $tempdir\n",
+        "os.makedirs(tempdir, exist_ok=True)\n",
+        "\n",
+        "print(' re-rendering final piece')\n",
+        "ptfiles = file_list(workdir, 'pt')\n",
+        "vsteps = int(duration * fps / (len(ptfiles)-1))\n",
+        "\n",
+        "ptest = torch.load(ptfiles[0])\n",
+        "if isinstance(ptest, list): ptest = ptest[0]\n",
+        "shape = [*ptest.shape[:3], (ptest.shape[3]-1)*2]\n",
+        "\n",
+        "pbar = ProgressBar(vsteps * len(ptfiles))\n",
+        "for px in range(len(ptfiles)):\n",
+        "  params1 = read_pt(ptfiles[px])\n",
+        "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
+        "\n",
+        "  params, image_f = fft_image(shape, resume=params1)\n",
+        "  image_f = to_valid_rgb(image_f)\n",
+        "\n",
+        "  for i in range(vsteps):\n",
+        "    with torch.no_grad():\n",
+        "      img = image_f((params2 - params1) * math.sin(1.5708 * i/vsteps)**2)[0].permute(1,2,0)\n",
+        "      img = torch.clip(img*255, 0, 255).cpu().numpy().astype(np.uint8)\n",
+        "    imageio.imsave(os.path.join(tempdir, '%05d.jpg' % (px * vsteps + i)), img)\n",
+        "    _ = pbar.upd()\n",
+        "\n",
+        "HTML(makevid(tempdir))\n"
       ],
       "execution_count": null,
       "outputs": []
