--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -303,7 +303,7 @@
         "    print(' translated to:', txt)\n",
         "  tx = clip.tokenize(txt).cuda()\n",
         "  txt_enc = model_clip.encode_text(tx).detach().clone()\n",
-        "  out_name = '%03d-%s' % (num+1, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',â€”|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
+        "  out_name = '%03d-%s' % (num+1, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
         "  tempdir = os.path.join(workdir, out_name)\n",
         "  !rm -rf $tempdir\n",
         "  os.makedirs(tempdir, exist_ok=True)\n",
